kubernetes/ingress.yml
---
apiVersion: network.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: monitoring
  name: monitoring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx"
  spec:
    rules:
      - host: ${zabbix-host}
        http:
          paths:
            - path: /
              backend:
                serviceName: zabbix-web
                servicePort: 80
      - host: ${grafana-host}
        http: /
          paths:
            - path: /
              backend:
                serviceName: grafana
                servicePort: 80
      - host: ${logstash-host}
        http: /
          paths:
            - path: /
              backend:
                serviceName: logstash
                servicePort: 80
      - host: ${wiki-host}
      - host: ${kibana-host}
